--- a/EpServerEngine/EpServerEngine/EpServerEngine.vcproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine.vcproj
@@ -821,6 +821,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\EpLibraryHeaders\epInterlockedEx.h"
+				>
+			</File>
+			<File
 				RelativePath=".\EpLibraryHeaders\epJobScheduleQueue.h"
 				>
 			</File>
