--- a/EpServerEngine/EpServerEngine/EpServerEngine90.vcproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine90.vcproj
@@ -746,10 +746,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\EpLibraryHeaders\epBaseFile.h"
-				>
-			</File>
-			<File
 				RelativePath=".\EpLibraryHeaders\epBaseJob.h"
 				>
 			</File>
@@ -763,6 +759,10 @@
 			</File>
 			<File
 				RelativePath=".\EpLibraryHeaders\epBaseOutputter.h"
+				>
+			</File>
+			<File
+				RelativePath=".\EpLibraryHeaders\epBaseTextFile.h"
 				>
 			</File>
 			<File
@@ -843,6 +843,10 @@
 			</File>
 			<File
 				RelativePath=".\EpLibraryHeaders\epl.h"
+				>
+			</File>
+			<File
+				RelativePath=".\EpLibraryHeaders\epLib.h"
 				>
 			</File>
 			<File
