--- a/EpServerEngine/EpServerEngine/EpServerEngine110.vcxproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine110.vcxproj
@@ -388,6 +388,8 @@
     <ClCompile Include="Sources\epBaseServerWorkerUDP.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="EpLibraryHeaders\epBaseTextFile.h" />
+    <ClInclude Include="EpLibraryHeaders\epLib.h" />
     <ClInclude Include="Headers\epBasePacketParser.h" />
     <ClInclude Include="Headers\epBaseServerObject.h" />
     <ClInclude Include="Headers\epBaseServerSendObject.h" />
@@ -406,7 +408,6 @@
     <ClInclude Include="Headers\epBaseServerWorkerUDP.h" />
     <ClInclude Include="EpLibraryHeaders\epAlgorithm.h" />
     <ClInclude Include="EpLibraryHeaders\epAssert.h" />
-    <ClInclude Include="EpLibraryHeaders\epBaseFile.h" />
     <ClInclude Include="EpLibraryHeaders\epBaseJob.h" />
     <ClInclude Include="EpLibraryHeaders\epBaseJobProcessor.h" />
     <ClInclude Include="EpLibraryHeaders\epBaseLock.h" />
