--- a/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
@@ -757,10 +757,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\EpLibraryHeaders\epBaseFile.h"
-				>
-			</File>
-			<File
 				RelativePath=".\EpLibraryHeaders\epBaseJob.h"
 				>
 			</File>
@@ -774,6 +770,10 @@
 			</File>
 			<File
 				RelativePath=".\EpLibraryHeaders\epBaseOutputter.h"
+				>
+			</File>
+			<File
+				RelativePath=".\EpLibraryHeaders\epBaseTextFile.h"
 				>
 			</File>
 			<File
@@ -854,6 +854,10 @@
 			</File>
 			<File
 				RelativePath=".\EpLibraryHeaders\epl.h"
+				>
+			</File>
+			<File
+				RelativePath=".\EpLibraryHeaders\epLib.h"
 				>
 			</File>
 			<File
