--- a/EpServerEngine/EpServerEngine/EpServerEngine100.vcxproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine100.vcxproj
@@ -340,6 +340,8 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Sources\epBaseClientManual.cpp" />
+    <ClCompile Include="Sources\epBaseClientUDPManual.cpp" />
     <ClCompile Include="Sources\epBasePacketParser.cpp" />
     <ClCompile Include="Sources\epPacket.cpp" />
     <ClCompile Include="Sources\epParserList.cpp" />
@@ -354,6 +356,8 @@
   <ItemGroup>
     <ClInclude Include="EpLibraryHeaders\epBaseTextFile.h" />
     <ClInclude Include="EpLibraryHeaders\epLib.h" />
+    <ClInclude Include="Headers\epBaseClientManual.h" />
+    <ClInclude Include="Headers\epBaseClientUDPManual.h" />
     <ClInclude Include="Headers\epBasePacketParser.h" />
     <ClInclude Include="Headers\epBaseServerObject.h" />
     <ClInclude Include="Headers\epBaseServerSendObject.h" />
