--- a/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
@@ -602,12 +602,20 @@
 						RelativePath=".\Sources\epBaseClient.cpp"
 						>
 					</File>
+					<File
+						RelativePath=".\Sources\epBaseClientManual.cpp"
+						>
+					</File>
 				</Filter>
 				<Filter
 					Name="UDP"
 					>
 					<File
 						RelativePath=".\Sources\epBaseClientUDP.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\Sources\epBaseClientUDPManual.cpp"
 						>
 					</File>
 				</Filter>
@@ -696,12 +704,20 @@
 						RelativePath=".\Headers\epBaseClient.h"
 						>
 					</File>
+					<File
+						RelativePath=".\Headers\epBaseClientManual.h"
+						>
+					</File>
 				</Filter>
 				<Filter
 					Name="UDP"
 					>
 					<File
 						RelativePath=".\Headers\epBaseClientUDP.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Headers\epBaseClientUDPManual.h"
 						>
 					</File>
 				</Filter>
