--- a/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
@@ -801,6 +801,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\EpLibraryHeaders\epCmdLineOptions.h"
+				>
+			</File>
+			<File
 				RelativePath=".\EpLibraryHeaders\epConsoleHelper.h"
 				>
 			</File>
