--- a/EpServerEngine/EpServerEngine/EpServerEngine100.vcxproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine100.vcxproj
@@ -355,6 +355,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EpLibraryHeaders\epBaseTextFile.h" />
+    <ClInclude Include="EpLibraryHeaders\epCmdLineOptions.h" />
     <ClInclude Include="EpLibraryHeaders\epLib.h" />
     <ClInclude Include="Headers\epBaseClientManual.h" />
     <ClInclude Include="Headers\epBaseClientUDPManual.h" />
