--- a/EpServerEngine/EpServerEngine/EpServerEngine110.vcxproj.filters
+++ b/EpServerEngine/EpServerEngine/EpServerEngine110.vcxproj.filters
@@ -332,6 +332,9 @@
     <ClInclude Include="Headers\epBaseClientUDPManual.h">
       <Filter>Header Files\Client Side\UDP</Filter>
     </ClInclude>
+    <ClInclude Include="EpLibraryHeaders\epCmdLineOptions.h">
+      <Filter>EpLibraryHeaders</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\LICENSE">
