--- a/EpServerEngine/EpServerEngine/EpServerEngine90.vcproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine90.vcproj
@@ -790,6 +790,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\EpLibraryHeaders\epCmdLineOptions.h"
+				>
+			</File>
+			<File
 				RelativePath=".\EpLibraryHeaders\epConsoleHelper.h"
 				>
 			</File>
