--- a/EpServerEngine/EpServerEngine/EpServerEngine100.vcxproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine100.vcxproj
@@ -356,6 +356,7 @@
   <ItemGroup>
     <ClInclude Include="EpLibraryHeaders\epBaseTextFile.h" />
     <ClInclude Include="EpLibraryHeaders\epCmdLineOptions.h" />
+    <ClInclude Include="EpLibraryHeaders\epEventEx.h" />
     <ClInclude Include="EpLibraryHeaders\epLib.h" />
     <ClInclude Include="Headers\epBaseClientManual.h" />
     <ClInclude Include="Headers\epBaseClientUDPManual.h" />
