--- a/EpServerEngine/EpServerEngine/EpServerEngine110.vcxproj.filters
+++ b/EpServerEngine/EpServerEngine/EpServerEngine110.vcxproj.filters
@@ -335,6 +335,9 @@
     <ClInclude Include="EpLibraryHeaders\epCmdLineOptions.h">
       <Filter>EpLibraryHeaders</Filter>
     </ClInclude>
+    <ClInclude Include="EpLibraryHeaders\epEventEx.h">
+      <Filter>EpLibraryHeaders</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\LICENSE">
