--- a/EpServerEngine/EpServerEngine/EpServerEngine90.vcproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine90.vcproj
@@ -822,6 +822,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\EpLibraryHeaders\epEventEx.h"
+				>
+			</File>
+			<File
 				RelativePath=".\EpLibraryHeaders\epException.h"
 				>
 			</File>
