--- a/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
@@ -584,14 +584,6 @@
 				RelativePath=".\Sources\epPacket.cpp"
 				>
 			</File>
-			<File
-				RelativePath=".\Sources\epParserList.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Sources\epServerObjectList.cpp"
-				>
-			</File>
 			<Filter
 				Name="Client Side"
 				>
@@ -648,6 +640,22 @@
 					</File>
 				</Filter>
 			</Filter>
+			<Filter
+				Name="ServerObject List"
+				>
+				<File
+					RelativePath=".\Sources\epParserList.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Sources\epServerObjectList.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Sources\epServerObjectRemover.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -675,10 +683,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Headers\epParserList.h"
-				>
-			</File>
-			<File
 				RelativePath=".\Headers\epse.h"
 				>
 			</File>
@@ -688,10 +692,6 @@
 			</File>
 			<File
 				RelativePath=".\Headers\epServerEngine.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Headers\epServerObjectList.h"
 				>
 			</File>
 			<Filter
@@ -749,6 +749,22 @@
 						>
 					</File>
 				</Filter>
+			</Filter>
+			<Filter
+				Name="ServerObject List"
+				>
+				<File
+					RelativePath=".\Headers\epParserList.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Headers\epServerObjectList.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Headers\epServerObjectRemover.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
