--- a/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
@@ -581,6 +581,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Sources\epBaseServerObject.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Sources\epPacket.cpp"
 				>
 			</File>
