--- a/EpServerEngine/EpServerEngine/EpServerEngine90.vcproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine90.vcproj
@@ -899,6 +899,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\EpLibraryHeaders\epLogWriter.h"
+				>
+			</File>
+			<File
 				RelativePath=".\EpLibraryHeaders\epMemory.h"
 				>
 			</File>
