--- a/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
@@ -909,6 +909,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\EpLibraryHeaders\epLogWriter.h"
+				>
+			</File>
+			<File
 				RelativePath=".\EpLibraryHeaders\epMemory.h"
 				>
 			</File>
