--- a/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
@@ -817,6 +817,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\EpLibraryHeaders\epBinaryFile.h"
+				>
+			</File>
+			<File
 				RelativePath=".\EpLibraryHeaders\epBinarySearch.h"
 				>
 			</File>
